<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40pt"
            android:text="@string/My_Nanodegree_Apps"
            android:textSize="10pt" />


        <Button
            android:id="@+id/buttonLibrary"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="#F08C35"
            android:text="@string/LIBRARY_APP" />

        <Button
            android:id="@+id/buttonBigger"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="#F08C35"
            android:text="@string/BUILD_IT_BIGGER" />

        <Button
            android:id="@+id/buttonBacon"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="#F08C35"
            android:text="@string/BACON_READER" />

        <Button
            android:id="@+id/buttonScore"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="#F08C35"
            android:text="@string/SCORE_APP" />

        <Button
            android:id="@+id/buttonSpotify"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="#F08C35"
            android:text="@string/SPOTIFY_STREAMER" />

        <Button
            android:id="@+id/buttonCapstone"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="#C62828"
            android:text="@string/CAPSTONEMYOWNAPP" />

    </LinearLayout>
</ScrollView>